--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.1.5"
   }
 }
