--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.5"
   }
 }
