--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
-    "mongoose": "^6.1.5"
+    "mongoose": "^6.1.5",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   }
 }
