--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^6.1.5",
+    "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
   }
