feat: add local account email verification functions, related routes, and page view

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ MONGODB_URI=mongodb://127.0.0.1/expense-tracker
 SESSION_SECRET=SKIP
 MAIL_USER=SKIP
 MAIL_PASSWORD=SKIP
+LOCAL_CALLBACK_URL=SKIP
+LOCAL_EMAIL_SENDER=localhost@example.com
