refactor: move some variable from userController.js into .env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 PORT=3000
 MONGODB_URI=mongodb://127.0.0.1/expense-tracker
 SESSION_SECRET=SKIP
-MAIL_USER=SKIP
-MAIL_PASSWORD=SKIP
-LOCAL_CALLBACK_URL=SKIP
+SMTP_MAIL_USER=SKIP
+SMTP_MAIL_PASSWORD=SKIP
+SMTP_HOST=smtp.gmail.com
+LOCAL_CALLBACK_URL=http://localhost:3000/auth/local/callback
